--- a/parallax/static/css/base.css
+++ b/parallax/static/css/base.css
@@ -79,7 +79,6 @@ h3 {
     transform-origin: 50% 50%;
     transform: translateZ(-50px);
     z-index: 0;
-    filter: blur(5px);
 }
 
 .card__one .card__img {
@@ -89,7 +88,7 @@ h3 {
 }
 
 .card__one .card__bg {
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_monobg.jpg') center / cover no-repeat;
+    background: url('../images/bg1.jpg') center / cover no-repeat;
 }
 
 .card__two .card__img {
@@ -97,7 +96,7 @@ h3 {
 }
 
 .card__two .card__bg {
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_spirited.jpg') center / cover no-repeat;
+    background: url('../images/bg2.jpg') center / cover no-repeat;
 }
 
 .card__three .card__img {
@@ -107,5 +106,22 @@ h3 {
 }
 
 .card__three .card__bg {
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/62105/3dr_howlbg.jpg') center / cover no-repeat;
+    background: url('../images/bg3.jpg') center / cover no-repeat;
+}
+
+.card__text {
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.55) 100%);
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+    z-index: 2;
+}
+  
+.card__title {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 0 10px;
+    margin-bottom: 3px;
 }
